deploy/kubernetes/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luiferfolio-deployment
  labels:
    app: luiferfolio
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: luiferfolio
      version: "1.0"
  template:
    metadata:
      labels:
        app: luiferfolio
        version: "1.0"
    spec:
      containers:
        - name: luiferfolio
          image: luifermoron/luiferfolio:1.3
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 102Mi
