deploy/kubernetes/django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: luiferfolio-service
spec:
  selector:
    app: luiferfolio
    version: "1.0"
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
